[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tomotriage"
version = "2.4.0"
description = "An interactive quality control tool for tilt series data processed with WarpTools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joshua Jenkins" },
]
dependencies = [
    "numpy",
    "mrcfile",
    "matplotlib",
    "PyQt5",
]

[project.urls]
Repository = "https://github.com/jjenkins01/TomoTriage"

# Expose the GUI as a command-line entry point so users can simply run
#   tomotriage --tomostar_dir ... --frame_dir ... --xml_dir ...
# instead of  python /full/path/to/tomotriage.py
[project.scripts]
tomotriage = "tomotriage:main"

# Treat the single-file module as a py-module rather than a package
[tool.setuptools]
py-modules = ["tomotriage"]
